поправлены шаблоны чтобы соответствовать окружению

--- a/template/django/httpd_vhosts.conf
+++ b/template/django/httpd_vhosts.conf
@@ -2,7 +2,7 @@
     ${web_server_name_settings}
     ServerAdmin ${web_admin_email}
 
-    WSGIScriptAlias / ${hosting_site_dir}/build/conf/django.wsgi
+    WSGIScriptAlias / ${hosting_site_dir}/django/django.wsgi
 
     ${web_server_wsgi_settings}
 
@@ -11,15 +11,15 @@
     CustomLog ${hosting_site_dir}/logs/access.log combined
     ServerSignature On
 
-    Alias /admin/media/ "${hosting_site_dir}/build/admin/media/"
-    Alias /static/ "${hosting_site_dir}/build/static/"
+    Alias /admin/media/ "${hosting_site_dir}/admin/media/"
+    Alias /static/ "${hosting_site_dir}/static/"
 
     # Allow access
-    <Directory "${hosting_site_dir}/build/admin/media">
+    <Directory "${hosting_site_dir}/admin/media">
                 Order allow,deny
                 Allow from all
     </Directory>
-    <Directory "${hosting_site_dir}/build/static">
+    <Directory "${hosting_site_dir}/static">
                 Order allow,deny
                 Allow from all
     </Directory>
