каталог для логов должен параметризоваться в одном месте

--- a/template/django/httpd_vhosts.conf
+++ b/template/django/httpd_vhosts.conf
@@ -7,8 +7,8 @@
     ${web_server_wsgi_settings}
 
     LogLevel debug
-    ErrorLog ${hosting_site_dir}/logs/error.log
-    CustomLog ${hosting_site_dir}/logs/access.log combined
+    ErrorLog ${log.default.dir}/error.log
+    CustomLog ${log.default.dir}/access.log combined
     ServerSignature On
 
     Alias /admin/media/ "${hosting_site_dir}/admin/media/"
